21-August-2011 Added Opus.Core.State.IsLittleEndian to query the endianness of the host platform. Might be useful on OSX.

21-August-2011 Removed old platform detection code. The new code is known to run on all supported platforms.

21-August-2011 Removing unnecessary namespace resolution in the Opus code.

21-August-2011 Package definition file (.xml in the package folder) schema change and package backend update to support packages of the same name, but different versions, for different platforms.
               New schema specifies dependent packages as before but with conditions, based on platforms; the Opus assemblies required, the system assemblies required, #defines to pass to the package compilation, and supported platforms for the package. The definition file is now a complete description of how to compile the package. Opus has been extended with command line options to act on these additional features.
               Legacy package definition files will be automatically upgraded to the new schema. There may be inaccurate data in there, with the new features.
               New Core class, PackageIdentifier, that is the minimum information needed to resolve package dependencies.
               Package dependencies are resolved early, and will only load the package definition files once.
               Timings are displayed at the end of build actions.
               Command line arguments to Opus are lazily evaluated from left to right (response files are inlined in place), and repeated specification of the same argument will override any existing value.
               Existing package definition files have not been updated to the latest schema in this commit, to illustrate the schema upgrade process in a future commit.

13-May-2011 Set version to 0.30.

--------------------------------------------------------------------------------

v0.20
=====
